2011-03-16  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* include/network/OutputThread.h: Move output_buffer to OutputThread.
	* src/network/OutputThread.cpp: Likewise.
	* src/solver/RelSatSolver.cpp: Likewise.
	* include/solver/RelSatSolver.h: Likewise.

	* include/mcs/BeliefState.h: Only delete the pointers when told to
	do so. There is a bug in the ConcurrentMessageQueue that prevent
	me from deleting the pointers in OutputThread::collecting_output().

	* include/dmcs/ModelSessionId.h: Add some assertions.

2011-03-15  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* examples/run-streaming.sh: Update to have log files for different PACK parameters.

	* testsuite/testBeliefStateCaching.cpp: Test stability of cache.

	* src/solver/RelSatSolver.cpp: Clean buffer in destructor.

	* src/network/OutputThread.cpp: Not allowed to delete output anymore.

	* src/dmcs/BeliefCombination.cpp: Fix bug when compiling with DEBUG flag on.

	* include/mcs/BeliefState.h: Add some assertions.

	* include/network/NeighborOut.h: Fix memory leaks.
	* src/solver/RelSatSolver.cpp: Likewise.
	* src/network/OutputThread.cpp: Likewise.
	* src/network/JoinThread.cpp: Likewise.
	* src/dmcs/StreamingDMCS.cpp: Likewise.

2011-03-14  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* testsuite/Makefile.am: Add testcase for PartialBeliefState caching.
	* testsuite/testBeliefStateCaching.cpp: New testcase.

	* src/solver/RelSatSolver.cpp: Cache input and output.
	* include/solver/RelSatSolver.h: Likewise.

	* include/mcs/BeliefState.h: Add helper functions for PartialBeliefState caching.

	* src/dmcs/OptDMCS.cpp: Before combining, just project the local
	theory away (keep guessing parts from the neighbors).

	* include/dmcs/BeliefCombination.h: Add project to just a position.
	* src/dmcs/BeliefCombination.cpp: Likewise.

2011-03-13  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* src/dmcsc.cpp: Clean up.

	* include/network/OutputThread.h: If EOF then always return EOF
	wrt NEXT request.