@@ -1,3 +1,12 @@
+2011-03-20  Minh Dao Tran  <dao@kr.tuwien.ac.at>
+
+	* include/network/Server.h: Check for multiple connections between
+	2 contexts.
+	* src/network/Server.cpp: Likewise.
+
+	* include/dmcs/StreamingForwardMessage.h: Replace invoker by path.
+	* src/dmcsc.cpp: Likewise.
+
 2011-03-16  Minh Dao Tran  <dao@kr.tuwien.ac.at>
 
 	* include/network/OutputThread.h: Move output_buffer to OutputThread.
